# tree-menu

./: .editorconfig  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/mtree/: admin.py  apps.py  models.py
src/mtree/migrations/: 0001_initial.py
src/mtree/templatetags/: menu_tree.py
src/templates/demo/: index.html
src/templates/templatetags/: menu.html  submenu.html
